# world-builder

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/prompts/: v0.1.md
scripts/: test_runner.py
src/world_builder/: cli.py  data.py  errors.py  parser.py  prompts.py
src/world_builder/prompts/: __init__.py  v0.1.md
src/world_builder/utils/: errors.py
tests/: test_cli.py  test_data.py  test_parser.py  test_prompts.py
tests/world_builder/: test_cli.py  test_errors.py
